--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pyodbc==4.0.39
 pypng==0.20220715.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-multipart==0.0.6
 pytz==2023.3
 PyYAML==6.0
 qrcode==7.4.2
