--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,40 @@
 anyio==3.6.2
+awscli==1.27.158
+botocore==1.29.158
 click==8.1.3
-colorama==0.4.6
+colorama==0.4.4
+distlib==0.3.6
+docutils==0.16
 fastapi==0.95.1
+filelock==3.12.2
 gunicorn==20.1.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+jmespath==1.0.1
 numpy==1.24.3
 pandas==2.0.1
 Pillow==9.5.0
+platformdirs==3.8.0
+pyasn1==0.5.0
 pydantic==1.10.7
 pyodbc==4.0.34
 pypng==0.20220715.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-multipart==0.0.6
 pytz==2023.3
-PyYAML==6.0
+PyYAML==5.4.1
 qrcode==7.4.2
+rsa==4.7.2
+s3transfer==0.6.1
 six==1.16.0
 sniffio==1.3.0
 starlette==0.26.1
 typing_extensions==4.5.0
 tzdata==2023.3
+urllib3==1.26.16
 uvicorn==0.22.0
+virtualenv==20.23.1
 watchfiles==0.19.0
 websockets==11.0.3
