--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,66 @@
+aiohttp==3.8.4
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
 anyio==3.6.2
-awscli==1.27.158
+async-timeout==4.0.2
+attrs==23.1.0
 botocore==1.29.158
+certifi==2023.5.7
+chardet==3.0.4
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.4
 distlib==0.3.6
 docutils==0.16
 fastapi==0.95.1
 filelock==3.12.2
+frozenlist==1.3.3
+gcloud==0.17.0
+googleapis-common-protos==1.59.1
 gunicorn==20.1.0
 h11==0.14.0
+httplib2==0.22.0
 httptools==0.5.0
-idna==3.4
+idna==2.8
 jmespath==1.0.1
+jws==0.1.3
+multidict==6.0.4
 numpy==1.24.3
+oauth2client==3.0.0
 pandas==2.0.1
 Pillow==9.5.0
 platformdirs==3.8.0
-pyasn1==0.5.0
-pydantic==1.10.7
+protobuf==4.23.3
 pyodbc==4.0.34
+psycopg2-binary==2.9.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycryptodomex==3.18.0
+pydantic==1.10.7
+PyJWT==2.7.0
+pyparsing==3.1.0
 pypng==0.20220715.0
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-jwt==2.0.1
 python-multipart==0.0.6
 pytz==2023.3
 PyYAML==5.4.1
 qrcode==7.4.2
+requests==2.30.0
+requests-toolbelt==0.7.0
 rsa==4.7.2
 s3transfer==0.6.1
 six==1.16.0
 sniffio==1.3.0
+urllib3==1.25.4
 starlette==0.26.1
+twilio==8.4.0
 typing_extensions==4.5.0
 tzdata==2023.3
-urllib3==1.26.16
 uvicorn==0.22.0
 virtualenv==20.23.1
 watchfiles==0.19.0
 websockets==11.0.3
+yarl==1.9.2
