--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==23.1.0
+awscli==1.27.158
 botocore==1.29.158
 certifi==2023.5.7
 chardet==3.0.4
@@ -15,7 +16,7 @@ docutils==0.16
 fastapi==0.95.1
 filelock==3.12.2
 frozenlist==1.3.3
-gcloud==0.17.0
+gcloud==0.18.3
 googleapis-common-protos==1.59.1
 gunicorn==20.1.0
 h11==0.14.0
@@ -26,20 +27,22 @@ jmespath==1.0.1
 jws==0.1.3
 multidict==6.0.4
 numpy==1.24.3
-oauth2client==3.0.0
+oauth2client==4.1.3
 pandas==2.0.1
 Pillow==9.5.0
 platformdirs==3.8.0
 protobuf==4.23.3
-pyodbc==4.0.34
 psycopg2-binary==2.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycryptodome==3.18.0
 pycryptodomex==3.18.0
 pydantic==1.10.7
 PyJWT==2.7.0
+pyodbc==4.0.34
 pyparsing==3.1.0
 pypng==0.20220715.0
+Pyrebase4==4.7.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -48,17 +51,17 @@ python-multipart==0.0.6
 pytz==2023.3
 PyYAML==5.4.1
 qrcode==7.4.2
-requests==2.30.0
-requests-toolbelt==0.7.0
+requests==2.29.0
+requests-toolbelt==0.10.1
 rsa==4.7.2
 s3transfer==0.6.1
 six==1.16.0
 sniffio==1.3.0
-urllib3==1.25.4
 starlette==0.26.1
 twilio==8.4.0
 typing_extensions==4.5.0
 tzdata==2023.3
+urllib3==1.25.4
 uvicorn==0.22.0
 virtualenv==20.23.1
 watchfiles==0.19.0
